--- a/front-service/src/main/resources/static/auth/auth.html
+++ b/front-service/src/main/resources/static/auth/auth.html
@@ -1,48 +1,5 @@
-<!doctype html>
+<div class="container" ng-controller="authController">
 
-<html ng-app="app">
-
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-    <script src="auth.js"></script>
-    <link rel="stylesheet" href="auth.css">
-    <title>GeekBrains market</title>
-</head>
-
-
-<body>
-<div class="container" ng-controller="indexController">
-
-    <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="http://localhost:5555/market/index.html">Главная страница</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
-                    aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarsExample02">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/cart/cart.html">Корзина</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/orders/orders.html">Заказы</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-    <h1>Market</h1>
     <div ng-show="isUserLoggedIn()">
         <label>
             <h3>
@@ -74,5 +31,3 @@
     </div>
 
 </div>
-</body>
-</html>
