--- a/front-service/src/main/resources/static/cart/cart.html
+++ b/front-service/src/main/resources/static/cart/cart.html
@@ -1,59 +1,14 @@
-<!doctype html>
-
-<html ng-app="app">
-
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-    <script src="cart.js"></script>
-    <title>GeekBrains market</title>
-</head>
-
-
-<body>
-
-<div class="container" ng-controller="indexController">
-
-    <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="http://localhost:5555/market/index.html">Главная страница</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
-                    aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarsExample02">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/cart/cart.html">Корзина</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/orders/orders.html">Заказы</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/auth/auth.html">{{enterView}}</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-    <h1>Market</h1>
+<div>
     <form class="order_form" ng-submit="createOrder()">
         <div class="form-floating mb-3">
             <label for="floatingInput1">Адрес доставки:</label>
-            <input type="text" class="form-control" id="floatingInput1" ng-model="orderInfo.address" placeholder="Адрес доставки">
+            <input type="text" class="form-control" id="floatingInput1" ng-model="orderInfo.address"
+                   placeholder="Адрес доставки">
         </div>
         <div class="form-floating">
             <label for="floatingInput2">Номер телефона:</label>
-            <input type="text" class="form-control" id="floatingInput2"  ng-model="orderInfo.phone" placeholder="Номер телефона">
+            <input type="text" class="form-control" id="floatingInput2" ng-model="orderInfo.phone"
+                   placeholder="Номер телефона">
         </div>
         <div class="submit_btn">
             <button class="btn btn-danger" ng-href="#" type="submit">Создать заказ</button>
@@ -74,7 +29,15 @@
         <tr ng-repeat="p in ProductsList.cartMap">
             <td>{{p.id}}</td>
             <td>{{p.title}}</td>
-            <td><button type="button" class="btn btn-secondary" ng-click="deleteProductFromCart(p.id)"><b2>-</b2></button> {{p.amount}} <button type="button" class="btn btn-secondary" ng-click="addToCart(p.id)"><b2>+</b2></button></td>
+            <td>
+                <button type="button" class="btn btn-secondary" ng-click="deleteProductFromCart(p.id)">
+                    <b2>-</b2>
+                </button>
+                {{p.amount}}
+                <button type="button" class="btn btn-secondary" ng-click="addToCart(p.id)">
+                    <b2>+</b2>
+                </button>
+            </td>
             <td>{{p.price}}</td>
             <td>{{p.price*p.amount}}</td>
             <td>
@@ -98,6 +61,3 @@
     </table>
 
 </div>
-
-</body>
-</html>
