--- a/front-service/src/main/resources/static/index.html
+++ b/front-service/src/main/resources/static/index.html
@@ -2,7 +2,6 @@
 
 <html ng-app="app">
 
-
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -11,7 +10,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-    <script src="index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular-route.min.js"></script>
     <link rel="stylesheet" href="index.css">
     <title>GeekBrains market</title>
 </head>
@@ -23,7 +22,7 @@
 
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="http://localhost:5555/market/index.html">Главная страница</a>
+            <a class="navbar-brand" href="#!/">Главная страница</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
                     aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -33,78 +32,38 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"
-                           href="http://localhost:5555/market/cart/cart.html">Корзина</a>
+                           href="#!/store">Каталог товаров</a>
+                    </li>
+                        <a class="nav-link active"
+                           href="#!/cart">Корзина</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"
-                           href="http://localhost:5555/market/orders/orders.html">Заказы</a>
+                           href="#!/orders">Заказы</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"
-                           href="http://localhost:5555/market/auth/auth.html">{{enterView}}</a>
+                           ng-show="!isAuthUser()" href="#!/auth">Вход</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                           ng-show="isAuthUser()" href="#!/auth">Выход</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <ng-view></ng-view>
 
-    <h1>Market</h1>
-
-    <h3>Список товаров</h3>
-    <div class="form-check">
-        <input class="form-check-input" ng-click="changeSort('ASC')" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
-        <label class="form-check-label" for="flexRadioDefault1">
-            По возрастанию
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" ng-click="changeSort('DESC')" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-        <label class="form-check-label" for="flexRadioDefault2">
-            По убыванию
-        </label>
-    </div>
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" ng-click="changeSortBy('id')" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
-        <label class="form-check-label" for="inlineRadio1">По артикулу</label>
-    </div>
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" ng-click="changeSortBy('title')" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-        <label class="form-check-label" for="inlineRadio2">По наименованию</label>
-    </div>
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" ng-click="changeSortBy('price')" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option2">
-        <label class="form-check-label" for="inlineRadio2">По цене</label>
-    </div>
-    <table class="table table-hover" cellpadding="" 0 cellspacing="0">
-        <tr>
-            <td>Артикул</td>
-            <td>Наименование</td>
-            <td>Цена</td>
-            <td>Действие</td>
-        </tr>
-        <tbody>
-        <tr class="table_element" ng-repeat="p in ViewDTO.productList">
-            <td ng-click="goToProductInfo(p.id)">{{p.id}}</td>
-            <td ng-click="goToProductInfo(p.id)">{{p.title}}</td>
-            <td ng-click="goToProductInfo(p.id)">{{p.price}}</td>
-            <td>
-                <button class="btn btn-primary" ng-click="addToCart(p.id)">Добавить в корзину</button>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-    <div class="footer_pages">
-        <nav aria-label="Page navigation example">
-            <ul class="pagination">
-                <li class="page-item" ng-repeat="n in ViewDTO.pages">
-                    <a class="page-link" ng-click="toPage(n)">{{n+1}}</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-
-
+    <script src="index.js"></script>
+    <script src="cart/cart.js"></script>
+    <script src="store/store.js"></script>
+    <script src="auth/auth.js"></script>
+    <script src="startPage/startPage.js"></script>
+    <script src="orders/orders.js"></script>
+    <script src="orderDetails/orderDetails.js"></script>
+    <script src="productDetails/productDetails.js"></script>
 </div>
 
 </body>
